# perf-project

./: CMakeLists.txt  README.md  my_functions.cpp  my_functions.hpp  myproject.cpp  oldmy_functions.cpp  projet_24_v1.cpp
Versions/: algorithm_changes.cpp  computational_reogarnization.cpp  loop_unrolling_and_loop_optimization.cpp  optimal_data_access_where_possible.cpp  removal_of_redundant_computations.txt
